# sample_agentic_ai_strands

./: .bedrock_agentcore.yaml  .dockerignore  .gitignore  AGENTCORE_SETUP.md  CLAUDE.md  Dockerfile  Dockerfile.backend  README.en.md  README.md  README_cases_en.md  bedrock_agentcore_template.yaml  cfn.yml  env.example  pyproject.toml  requirements.txt  run_validation_ui.sh
agentcore_scripts/: get_token.py  get_token.sh  run.sh  run_setup.sh  setup_cognito.sh  setup_ecr.py  setup_id.py  setup_memory.py  setup_role.py  test_cognito_setup.py  update_env.py  utils.py
agentcore_scripts/setup_mcp_gateway/: .bedrock_agentcore.yaml  .env_gateway  .env_mcp  .env_mcp_cleanup_info  Dockerfile  README.md  deploy_requirements.txt  gateway_deploy.py  gw_utils.py  mcp_server.py  remote_mcp_deploy.py  requirements.txt  resource-clean-up.py  setup_gateway.sh  setup_mcp_runtime.sh  test_mcp_gateway.ipynb  test_mcp_gw.py
cdk/: cdk-build-and-deploy.sh  cdk-deployment-iam-policy.json  cdk.context.json  package-lock.json  package.json  update-ecs-services.sh  update-secrets.sh
cdk/lib/: ecs-fargate-stack.ts
conf/: config.json
mcp/: eb_server.py
react_ui/: .env.example  CODE_FLOW_ANALYSIS.md  Dockerfile  package-lock.json  package.json
react_ui/app/: layout.tsx  page.tsx
src/: agent_runtime.py  agentcore_runtime.py  agentcore_wrapper.py  auth.py  chat_client.py  constant.py  data_types.py  main.py  mcp_client_strands.py  strands_agent_client.py  strands_agent_client_stream.py  strands_hooks.py  utils.py  workshop_validation_ui.py
tests/: browser_test.py  test_runtime.py
(+40 files in other folders)
